--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.16.1",
+    "framer-motion": "^2.9.4",
     "object-path": "^0.11.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-modal-sheet": "^0.1.3",
     "react-scripts": "^3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
